--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,54 +2,84 @@ version: 2.1
 defaults: &defaults
     working_directory: /home/circleci/workspace
     docker:
-      - image: thirupathip/terraform-aws:kb
-        
+      - image: thirupathip/terraform-aws:go
+      - command: |
+             aws configure set aws_region ${AWS_DEFAULT_REGION}
+             aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+             aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+      - command: chmod -R 770 /home/circleci/
 jobs:
-   s3-list-thirupathi:
+   terraform-s3:
      <<: *defaults
      steps:
-        - checkout
-        - run:
-            name: Permissions
-            command: chmod -R 770 /home/circleci/
-        - run:
-            name: Configure of aws
-            command: |
-                  aws configure set aws_region ${AWS_DEFAULT_REGION}
-                  aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
-                  aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}  
         - run: 
-            name: terraform Apply
+            name: S3 Creation using terraform
             command: |
-                 cd ./environments/lambda
+                 cd ./weather/terraform/s3
                  terraform init
                  terraform plan
                  terraform apply -auto-approve
+   terraform-go:
+     <<: *defaults
+     steps:
+        - run: 
+            name: Writing a Lambda function in Go is quite similar
+            command: |
+                 cd ./weather/faas
+                 go get github.com/aws/aws-lambda-go/lambda
+                 GOOS=linux go build -o faas main.go
+                 zip faas.zip faas
+                 aws s3 cp faas.zip s3://{my-artifact-s3-bucket-url}/
+
+  terraform-lambda:
+     <<: *defaults
+     steps: 
+        - run: 
+            name: creating the API Gateway and Lambda!
+            command: |
+                 cd ./weather/terraform/lambda-apigw-iam
+                 terraform init
+                 terraform plan
+                 terraform apply -auto-approve
+                 
+  terraform-web:
+     <<: *defaults
+     steps:
+        - run: 
+            name: The html part is pretty basic
+            command: |
+                 cd ./weather/frontend
+                 aws s3 cp index.html s3://{your-s3-website-bucket}/ --acl public-read 
+  
+  terraform-destroy:
+     <<: *defaults
+     steps:
+        - run: 
+            name: Destroy terraform
+            command: |
+                 cd terraform/lambda-apigw-iam
                  terraform destroy -auto-approve
-#    s3-list-naveen:
-#      <<: *defaults
-#      steps:
-#         - checkout 
-#         - run: 
-#             name: permissions
-#             command: chmod -R 770 /home/circleci/
-#         - run:
-#             name: naveen account accessed
-#             command: |
-#                 ./.circleci/scripts/nonprod_profile.sh
-#         - run:
-#             name: send into that
-#             command: |
-#                 ./.circleci/scripts/process.sh
+                 cd ../s3
+                 terraform destroy -auto-approve   
 
 workflows:
     version: 2
-    s3-list-out:
-      jobs: 
-         - s3-list-thirupathi
-        #  - s3-list-naveen      
-     
-
+    terraform-list-out:
+      jobs:
+         - checkout 
+         - terraform-s3
+         - terraform-go:
+             requires:
+                 - terraform-s3
+         - terraform-lambda:
+             requires:
+                 - terraform-go
+         - terraform-web:
+             requires:
+                 - terraform-lambda
+         - terraform-destroy:
+             requires:
+                 - terraform-lambda
 
 # version: 2.1
 # jobs:
