--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
                  go get github.com/aws/aws-lambda-go/lambda
                  GOOS=linux go build -o faas main.go
                  zip faas.zip faas
-                 aws s3 cp faas.zip s3://{my-artifact-s3-bucket-url}/
+                 aws s3 cp faas.zip s3://12345-artifact-bucket/
    terraform-lambda:
      <<: *defaults
      steps:
@@ -60,7 +60,7 @@ jobs:
                  terraform init
                  terraform plan
                  terraform apply -auto-approve
-                 
+
    terraform-web:
      <<: *defaults
      steps:
@@ -76,7 +76,7 @@ jobs:
             name: The html part is pretty basic
             command: |
                  cd ./weather/frontend
-                 aws s3 cp index.html s3://{your-s3-website-bucket}/ --acl public-read 
+                 aws s3 cp index.html s3://weather-api-website1/ --acl public-read 
   
    terraform-destroy:
      <<: *defaults
