--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
                  terraform apply -auto-approve
    terraform-go:
      <<: *defaults1
+     <<: *defaults
      steps:
         - checkout
         - run:
