--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
 workflows:
     version: 2
     terraform-list-out:
-      jobs:
+      steps:
          - checkout
          - run:
             name: Configure
@@ -101,6 +101,8 @@ workflows:
               aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
               aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
               chmod -R 770 /home/circleci/
+         
+      jobs:
          - terraform-s3
          - terraform-go:
              requires:
