--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,12 @@ defaults1: &defaults1
     docker:
       - image: golang
 
+
 jobs:
    terraform-s3:
      <<: *defaults
      steps:
+        - checkout
         - run:
             name: Configure
             command: |
@@ -29,6 +31,7 @@ jobs:
    terraform-go:
      <<: *defaults1
      steps:
+        - checkout
         - run: 
             name: Writing a Lambda function in Go is quite similar
             command: |
@@ -36,10 +39,26 @@ jobs:
                  go get github.com/aws/aws-lambda-go/lambda
                  GOOS=linux go build -o faas main.go
                  zip faas.zip faas
+   terraform-go1:
+     <<: *defaults
+     steps:
+        - checkout
+        - run:
+            name: Configure
+            command: |
+              aws configure set aws_region ${AWS_DEFAULT_REGION}
+              aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+              aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+              chmod -R 770 /home/circleci/
+        - run: 
+            name: Writing a Lambda function in Go is quite similar
+            command: |
+                 cd ./weather/faas
                  aws s3 cp faas.zip s3://12345-artifact-bucket/
    terraform-lambda:
      <<: *defaults
-     steps:  
+     steps:
+        - checkout  
         - run:
             name: Configure
             command: |
@@ -58,6 +77,7 @@ jobs:
    terraform-web:
      <<: *defaults
      steps:
+        - checkout 
         - run:
             name: Configure
             command: |
@@ -74,6 +94,7 @@ jobs:
    terraform-destroy:
      <<: *defaults
      steps:
+        - checkout         
         - run:
             name: Configure
             command: |
@@ -92,15 +113,6 @@ jobs:
 workflows:
     version: 2
     terraform-list-out:
-      checkout
-      run:
-          name: Configure
-          command: |
-              aws configure set aws_region ${AWS_DEFAULT_REGION}
-              aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
-              aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
-              chmod -R 770 /home/circleci/
-         
       jobs:
          - terraform-s3
          - terraform-go:
